# cuDilithium

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
benches/: CMakeLists.txt  bench_dilithium.cu  bench_ntt_radix2.cu  bench_ntt_radix8.cu  bench_rej_sampling.cu  p_randombytes.cpp  trng.c
include/: api.cuh  config.h  fips202.h  keccak.cuh  keypair.cuh  ntt.cuh  params.h  poly.cuh  randombytes.h  reduce.cuh  rounding.cuh  sign.cuh  util.cuh  verify.cuh
include/fips202/: fips202.cuh  fips202.h
results/: dili2_batch.csv  dili2_stream.csv  plot.ipynb  sign_threshold.csv
src/: CMakeLists.txt  api.cu  fips202.cpp  keccak.cu  keypair.cu  ntt.cu  sign.cu  verify.cu
src/fips202/: CC0_LICENSE  CMakeLists.txt  MIT_LICENSE  fips202.c  fips202.cu  keccak.cu
tests/: CMakeLists.txt  prng.c  test_vectors.cu
